--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        line-height: 80%;
+        src: url('https://fonts.googleapis.com/css2?family=Poppins'); /* IE9 Compat Modes */
+        
+    }
+}
